--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
+DB_HOST=db
 DB_USER=root
-DB_PASSWORD=
+DB_PASSWORD=root
 DB_NAME=winess
-JWT_SECRET=winess_super_secret_key_123
+DB_PORT=3306
